# E-Market

./: .gitignore
.github/workflows/: testing.yml
Documents/Sketch/: ArchitectureOverview.drawio  ClassOverview.drawio  CustomerDatabase.drawio  SSD.drawio  domainmodel.drawio  login.drawio
Source/: run.py
Source/Application/: conanfile.py  login.pyd  run_all_test.py  t.py  test_intergrate_inventory_shop.py  test_intergrate_shop.py  test_results.txt  test_user.py  test_user_buying.py
Source/Core/: CMakeLists.txt  conanfile.py  run.py  test.cpp
Source/Core/Database/: CMakeLists.txt
Source/Core/Login/: CMakeLists.txt  Login.cpp  Login.h  LoginBinding.cpp
Source/Core/Purchase/: CMakeLists.txt  Cart.cpp  Cart.h  Inventory.cpp  Inventory.h  Product.cpp  Product.h  Shop.cpp  Shop.h
Source/Core/User/: Admin.h  CMakeLists.txt  Customer.cpp  Customer.h  Seller.cpp  Seller.h  User.cpp  User.h  UserBinding.cpp
Source/Core/common/: CMakeLists.txt  Exception.h
Source/Database/: DBPlugin.h
Source/DatabaseServer/: database.py  database_schema.sql
Source/Login/: CMakeLists.txt  Login.cpp  Login.h  LoginBinding.cpp
